gitops/apps/authentik/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgres
  labels:
    app: authentik-postgres
spec:
  selector:
    matchLabels:
      app: authentik-postgres
  template:
    metadata:
      labels:
        app: authentik-postgres
    spec:
      containers:
      - image: postgres:17.2
        name: postgres
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authentik-db
