gitops/apps/authentik/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgres
spec:
  selector:
    app: authentik-postgres
  ports:
  - port: 5432
    targetPort: postgres
