gitops/apps/authentik/apps-protect-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
spec:
  rules:
  - host: "virt.didactik.labs"
    http:
      paths:
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: authentik-authentik
            port:
              number: 80
