gitops/apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
  - name: public
    namespace: istio-system
    sectionName: https
  hostnames:
  - auth.didactiklabs.io
  rules:
  - backendRefs:
    - name: authentik-server
      port: 80
